--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -2,15 +2,11 @@
   "name": "starchive",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": [
-    "http://localhost:3000/*"
-  ],
   "host_permissions": [
-    "http://localhost:3000/*"
+    "http://localhost:3009/*"
   ],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "scripts": ["background.js"]
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
